# Modulr.Core

./: .gitignore  LICENSE.md  README.md  dev.toml  pyproject.toml
.cursor/skills/google-python-docstrings/: SKILL.md
.cursor/skills/pre-commit-checks/: SKILL.md
.cursor/skills/verify-package-before-install/: SKILL.md
.github/workflows/: ci.yml
docs/: Architecture.md  MVP scope.md  genesis_and_session_roadmap.md  identity_encryption_and_org_policy.md  implementation_plan_profile_and_org_images.md  modulr_protocol_core_v_1_draft.md  organizations_and_envelope_encryption.md  partner_methods.md  platform_ui_and_protocol.md
frontend/: README.md  instrumentation-client.ts  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/app/methods/: page.tsx
frontend/app/profile/: page.tsx
frontend/app/registration/: page.tsx
frontend/app/resolve/: page.tsx
frontend/components/: icons.tsx
frontend/components/background/: AnimatedBackground.tsx  BrickField.css  BrickField.tsx  FireflyField.tsx  GameOfLifeField.tsx  MetaballField.tsx
frontend/components/dashboard/: DashboardMock.tsx  MockDonutChart.tsx  MockHealthActivityChart.tsx  mockModuleMetrics.ts
frontend/components/methods/: MethodsMock.tsx  PrettyMockResponse.tsx  ReportModuleStateDashboardFields.tsx  mockMethodCatalog.ts
frontend/components/profile/: PublicProfileMock.tsx
frontend/components/providers/: AppProviders.tsx
frontend/components/registration/: RegistrationMock.tsx  mockRegistrationPricing.ts  useMockAvailability.ts
frontend/components/resolve/: mockResolve.ts
frontend/components/settings/: SettingsPanel.tsx
frontend/components/shell/: AppShell.tsx  BrandMark.tsx  ClientShell.tsx  GenesisNoticeModal.tsx  GlassPanel.tsx  ShellOrgLogo.tsx  ThemeModeSwitch.tsx
frontend/components/ui/: ModulrSelect.tsx
frontend/hooks/: useCoreVersion.ts  useEffectiveMotion.ts  useGenesisBranding.ts
frontend/lib/: coreApi.ts  coreBaseUrl.ts  formatClientError.ts  installUnhandledRejectionEventFilter.ts  reportModuleStateDetail.ts  settings.ts  themeVars.ts
frontend/lib/modulrWire/: bytes.ts  payloadHash.ts  randomUuid.ts  signCoreMessage.ts
frontend/public/branding/: README.md
keymaster/: README.md  pyproject.toml
keymaster/src/modulr_keymaster/: __init__.py  app.py  cli.py  paths.py  profiles.py  sessions.py  vault_crypto.py  vault_file.py
keymaster/src/modulr_keymaster/static/: keymaster.css  keymaster.js  modulr-theme.css
keymaster/src/modulr_keymaster/templates/: base.html  dashboard.html  not_found.html  profile_detail.html  profile_new.html  profile_rename.html  profile_sign.html  setup.html  unlock.html
keymaster/tests/: test_add_identity.py  test_app_vault_flow.py  test_rename_and_export.py  test_session_expiry.py  test_session_vault_sync.py  test_sign_challenge.py  test_vault_crypto.py
scripts/: smoke_local.py
src/modulr_core/: __init__.py  __main__.py  bootstrap_effective.py  cli.py  clock.py  version.py
src/modulr_core/config/: __init__.py  load.py  schema.py
src/modulr_core/errors/: __init__.py  codes.py  exceptions.py
src/modulr_core/genesis/: __init__.py  challenge.py  cli.py  completion.py  local_invoke.py  parsing.py  reset.py  wire_map.py
src/modulr_core/http/: __init__.py  app.py  config_resolve.py  envelope.py  genesis.py  replay_cache.py  status_map.py
src/modulr_core/messages/: __init__.py  constants.py  pipeline.py  types.py  wire_method_catalog.py
src/modulr_core/operations/: __init__.py  authorize.py  dispatch.py  handlers.py  handlers_branding.py  module_names.py  payload_util.py
src/modulr_core/persistence/: __init__.py  connection.py  migrate.py
src/modulr_core/repositories/: __init__.py  core_advertised_route.py  core_genesis.py  dial_route_entry.py  entity_profile_branding.py  genesis_challenge.py  heartbeat.py  message_dedup.py  module_state_snapshot.py  modules.py  name_bindings.py
src/modulr_core/validation/: __init__.py  canonical.py  ed25519.py  hex_codec.py  names.py
tests/: canonical_parity_node.mjs  canonical_vectors.json  test_canonical_json.py  test_canonical_parity.py  test_clock.py  test_codes.py  test_config.py  test_core_genesis_repository.py  test_ed25519.py  test_genesis_challenge.py  test_genesis_cli.py  test_genesis_completion.py  test_genesis_http.py  test_genesis_reset.py  test_hex_codec.py  test_http.py  test_messages_pipeline.py  test_modulr_core_smoke.py  test_names.py  test_operations.py  test_payload_util.py  test_persistence.py  test_replay_cache.py
viewer/: README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
viewer/src/: App.tsx  index.css  main.tsx
viewer/src/components/: icons.tsx
(+75 files in other folders)
