[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "modulr-core"
version = "2026.3.22.0"
description = "Modulr.Core — routing, naming, identity, and module registry (reference implementation)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "BSL-1.1" }
authors = [{ name = "Modulr" }]

dependencies = [
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
]
http = ["fastapi>=0.115.0", "uvicorn[standard]>=0.30.0"]

[project.scripts]
modulr-core = "modulr_core.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["modulr_core"]
